# Rubot

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: code_quality.yml  deploy.yml
src/: main.rs
src/command/: class_rooms.rs  malid.rs
src/commands/: class_rooms.rs  malid.rs  mod.rs  rooms.rs
