[package]
name = "rubot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
serenity = "0.11.6"
tokio = {version = "1.33.0", features = ["macros", "signal", "rt-multi-thread"]}
