[package]
name = "rubot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenvy = "0.15.7"
poise = "0.5.7"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["macros", "signal", "rt-multi-thread"]}
