[package]
name = "rubot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
dotenvy = "0.15.7"
poise = "0.5.7"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
shuttle-poise = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-secrets = "0.35.1"
tokio = {version = "1.33.0", features = ["macros", "signal", "rt-multi-thread"]}
